Auth full raw dog send
